tests/NormalTests/paczka1/small_fuzzy/54800604.err
Error in line 1: S443 S443 69,3
Error in line 2: wa9 A646 50,8
